TEST_PROGRAMS/typing_benchmarks/invalid/block_scope3.go
package main

func main() {
	if true {
	} else {
		var x int
	}
	println(x)
}
